--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "3.3.5",
     "react": "0.14.0",
     "react-bootstrap": "0.27.2",
-    "react-dom": "0.14.0"
+    "react-dom": "0.14.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
