--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "karma-mocha-reporter": "1.1.1",
     "karma-webpack": "1.7.0",
     "react-addons-test-utils": "0.14.0",
+    "redux-devtools": "^2.1.5",
+    "redux-devtools-diff-monitor": "^3.0.0",
     "style-loader": "0.13.0",
     "webpack": "1.12.1",
     "webpack-dev-server": "1.11.0"
