--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "500Tech",
   "dependencies": {
     "bootstrap": "3.3.5",
+    "immutable": "^3.7.5",
     "react": "0.14.0",
     "react-bootstrap": "0.27.2",
     "react-dom": "0.14.0",
