--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "0.14.0",
     "react-bootstrap": "0.27.2",
     "react-dom": "0.14.0",
+    "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4"
   },
