--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "500Tech",
   "dependencies": {
     "bootstrap": "3.3.5",
+    "history": "^1.13.0",
     "immutable": "^3.7.5",
     "react": "0.14.0",
     "react-bootstrap": "0.27.2",
     "react-dom": "0.14.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "react-router": "^1.0.0-rc3",
+    "redux": "^3.0.4",
+    "redux-immutablejs": "0.0.7"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
