--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "0.14.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "redux-thunk": "^1.0.0",
+    "superagent": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "3.1.0",
